--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,7 +19,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  file_browser:
+  lw_file_browser:
     path: ../
 
 # For information on the generic Dart part of this file, see the
